Updates to recipes

--- a/_posts/2016-08-12-prime-rib.md
+++ b/_posts/2016-08-12-prime-rib.md
@@ -1,9 +1,8 @@
 ---
 layout: post
 title: You'll Never Believe It Prime Rib!
-tags:
-  - gluten_free
-  - main_course
+category: main_course
+tags: ["gluten_free", "prime_rib", "main_course", "holiday"]
 ---
 
 This can be started in mid-afternoon and served the same night but don't ask me why it works.
